style: Reduce h1 font size to prevent text wrapping

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header h3 span {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3em;
 }
 
 /* Largest */
